v 1.2.0 (unreleased)

v 1.1.0
  - Update to sidekiq 4
  - Update to rails 4.2.5
  - Remove unused select2-rails dependency
  - Update outdated PLGrid OpenId CA cert
  - Update to shoulda-matchers 3
  - Dependencies update
  - Use ruby 2.2.4
  - Add possibility to select which application is shown on main page

v 1.0.0
  - Possibility to create application with defined subdomain name
  - Authorization and authentication using PLGrid OpenId
  - Dropbox application file synchronization
  - Proxy for DataNet service (annotation service)
  - JS library for DataNet service
  - Proxy for PLG-Data service (files management on the PLGrid infrastructure)
  - JS library for PLG-Data service
  - Proxy for the rimrock service (submitting jobs to the PLGrid infrastructure)
  - JS library for the rimrock service
  - JS library for getting information about the user