@@ -1,10 +1,18 @@
 class Subdomain
   def self.matches?(request)
-    if request.subdomain.present?
-      subdomain = real_subdomain(request.subdomain)
-      !subdomain.blank? && subdomain != 'www'
+    s = subdomain(request)
+    if s.present?
+      s = real_subdomain(s)
+      !s.blank? && s != 'www'
     end
+  end
 
+  def self.subdomain(request)
+    if defined? request.subdomain
+      request.subdomain
+    else
+      ActionDispatch::Http::URL.extract_subdomain(request, 1)
+    end
   end
 
   def self.real_subdomain(subdomain)
